# aipi540_depth

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_inf.sh
scripts/: test.sh  train_depth.sh  train_jepa_vit.sh  visualize.sh
server/: app.py  gunicorn.conf.py
slurm/: test.sh  train_depth.sh  train_depth_cluster.sh  train_jepa.sh  visualize.sh
src/: cli.py
src/data/: README.md  dataset.py  depth_ds.py  download.py  ds.py  hf_dataset.py
src/losses/: loss.py
src/models/: model.py
src/test/: evaluate.py  evaluate_full.py  inference.py  test.py
src/training/: train_classic.py  train_deeplearning.py  train_depth.py  train_depth_jepa.py  train_naive.py  train_supervised.py
src/utils/: check_depth.py  inspect_ckpt.py  metrics.py  save.py  visualize_sync_transforms.py
src/visualization/: visualize_pipeline.py  visualize_predictions.py
